--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/nodemon/bin/nodemon.js src/app.js",
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,8 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.1",
+    "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.4.3",
+    "express": "^4.14.0",
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.14.2",
+    "http": "0.0.0",
+    "mongodb": "^2.2.11",
+    "mongoose": "^4.6.6",
+    "mysql": "^2.12.0",
+    "path": "^0.12.7",
+    "serve-static": "^1.11.1",
     "cors": "^2.8.4",
-    "express": "^4.15.4",
     "morgan": "^1.8.2",
     "nodemon": "^1.12.1"
   }
